--- a/front-end/src/login.html
+++ b/front-end/src/login.html
@@ -69,7 +69,8 @@
                 Login
               </button>
               <p>
-                Don't have account ? <a href="register">create an account</a>
+                Don't have account ?
+                <a href="register.html">create an account</a>
               </p>
             </form>
           </div>
